Refactor to use name of class instead of explicit task name

--- a/tests/executor/fasta/fasta-config.yaml
+++ b/tests/executor/fasta/fasta-config.yaml
@@ -24,4 +24,10 @@ summarize:
   memory: 40G
   time: "4:00:00"
 
+Align:
+  workers: 10
+  threads: 1
+  memory: 40G
+  time: "4:00:00"
+
 ...  # document end
