--- a/tests/executor/bad_program_path/bad_program_path-config.yaml
+++ b/tests/executor/bad_program_path/bad_program_path-config.yaml
@@ -3,8 +3,7 @@
 ###########################################
 ## Pipeline input section
 INPUT:
-  base:  # List pipelines containing input data
-    root
+  root: all
 
 ###########################################
 
