--- a/tests/executor/no_output/no_output-config.yaml
+++ b/tests/executor/no_output/no_output-config.yaml
@@ -3,8 +3,7 @@
 ###########################################
 ## Pipeline input section
 INPUT:
-  base:  # List pipelines containing input data
-    root
+  root: all
 
 ###########################################
 
