--- a/tests/executor/fasta/fasta-config.yaml
+++ b/tests/executor/fasta/fasta-config.yaml
@@ -5,6 +5,13 @@
 INPUT:
   root: all
 
+## Global settings
+GLOBAL:
+  # Maximum threads/cpus to use in analysis
+  MaxThreads: 10
+  # Maximum memory to use (in GB)
+  MaxMemory: 100
+
 ###########################################
 
 SLURM:
@@ -18,15 +25,15 @@ SLURM:
   user-id: uid
 
 Summarize:
-  workers: 10
+  workers: 1
   threads: 1
-  memory: 40G
+  memory: 40
   time: "4:00:00"
 
 Align:
-  workers: 10
+  workers: 1
   threads: 1
-  memory: 40G
+  memory: 40
   time: "4:00:00"
   FLAGS:
     -x one
